<resources>
    <string name="app_name">Chat App</string>
    <string name="projectname">Chat App</string>
    <string name="yeni_hesap_olustur">Yeni Hesap Oluştur</string>
    <string name="hesabimvar">Hesabım Var</string>
    <string name="hesabınızlagiris">Hesabınızla Giriş Yapınız</string>
    <string name="btngirisyap">Giriş Yap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
