<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.WelcomeActivity">

    <TextView
        android:id="@+id/txtBaslik"
        android:layout_width="254dp"
        android:layout_height="104dp"
        android:layout_marginTop="208dp"
        android:gravity="center"
        android:text="@string/projectname"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGirisYap"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="128dp"
        android:background="@color/colorbtngirisyap"
        android:text="@string/hesabimvar"
        android:textColor="@color/colorbtntextcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBaslik" />

    <Button
        android:id="@+id/btnYeniHesap"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorbtnyenikayit"
        android:text="@string/yeni_hesap_olustur"
        android:textColor="@color/colorbtntextcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGirisYap" />

    <ImageView
        android:id="@+id/imageChat"
        android:layout_width="170dp"
        android:layout_height="174dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat" />

</androidx.constraintlayout.widget.ConstraintLayout>