<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <Button
        android:id="@+id/btnYeniHesapLogin"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="71dp"
        android:background="@color/colorbtnyenikayit"
        android:text="@string/yeni_hesap_olustur"
        android:textColor="@color/colorbtntextcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGirisYapLogin" />

    <Button
        android:id="@+id/btnGirisYapLogin"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="135dp"
        android:background="@color/colorBackground"
        android:text="@string/btngirisyap"
        android:textColor="@color/colorbtntextcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <TextView
        android:id="@+id/txtYeniHesap2"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:gravity="center|left"
        android:text="@string/hesabınızlagiris"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin" />

    <include
        android:id="@+id/toolbarLogin"
        layout="@layout/toolbar_action" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYeniHesap2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSifreLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Şifre"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>